--- a/projeto-pokedex/index.html
+++ b/projeto-pokedex/index.html
@@ -9,14 +9,15 @@
     <!-- Normalize Css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!-- Fonte Roboto -->
+    <!-- Fonte Inter -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;700&display=swap" rel="stylesheet">
 
     <!-- Css -->
     <link rel="stylesheet" href="./assets/css/global.css">
     <link rel="stylesheet" href="./assets/css/pokedex.css">
+    <link rel="stylesheet" href="./assets/css/individualPoke.css">
 </head>
 <body>
 
@@ -24,6 +25,86 @@
         <h1>Pokedex</h1>
         <ol id="pokemonList" class="pokemons">
         </ol>
+        <div class="pokemonIndividual">
+            <div class="headerPoke">
+                <button class="back"></button>
+                <h2 class="name">Bulbasaur</h2>
+                <span class="idPoke">#001</span>
+            </div>
+            <div class="photoSection">
+                <button class="previous"></button>
+                <img src="imgs/bulbasauro.svg" alt="" class="photoIndividual">
+                <button class="next"></button>
+            </div>
+            <div class="informations">
+                <ul class="tipo">
+                    <li class="type grass">
+                        Grass
+                    </li>
+                    <li class="type poison">
+                        Poison
+                    </li>
+                </ul>
+                <h2 class="titlepoke">
+                    About
+                </h2>
+                <div class="dados-container">
+                    <ul class="dados">
+                        <li class="dado" id="weight">
+                            6,9kg
+                        </li>
+                        <li class="reference">
+                            Weight
+                        </li>
+                    </ul>
+                    <span class="border">
+
+                    </span>
+                    <ul class="dados">
+                        <li class="dado" id="height">
+                            0,7
+                        </li>
+                        <li class="reference">
+                            height
+                        </li>
+                    </ul>
+                    <span class="border">
+
+                    </span>
+                    <ul class="dados">
+                        <li class="dado" id="moves">
+                            <span>Chlorophyll</span>
+                            <span>Overgrow</span>
+                        </li>
+                        <li class="reference">
+                            Moves    
+                        </li>
+                    </ul>
+                </div>
+                <p class="description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga sed porro iusto, distinctio ut a non tempore cum beatae. Assumenda unde modi sequi facilis maxime cum itaque nemo? Placeat, fugit!
+                </p>
+
+                <h2 class="titlepoke">
+                    Base states
+                </h2>
+                <div>
+                    <ul>
+                        <li class="atribute">HP</li>
+                        <li class="atribute">ATK</li>
+                        <li class="atribute">DEF</li>
+                    </ul>
+                    <ul>
+                        <li class="power">045</li>
+                        <li class="bar"></li>
+                        <li class="power">045</li>
+                        <li class="bar"></li>
+                        <li class="power">045</li>
+                        <li class="bar"></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
 
         
         <div class="pagination">
