--- a/projeto-pokedex/index.html
+++ b/projeto-pokedex/index.html
@@ -26,7 +26,9 @@
         <ol id="pokemonList" class="pokemons">
         </ol>
         
+        <div class="container"> 
 
+        </div>
         
         <div class="pagination">
             <button id="loadMoreButton" type="button">
